Add charjs and plot the data from csv
- link chartjs via cdn
- add the canvas element
- create chart objec
- plot the chart dataset

--- a/index.html
+++ b/index.html
@@ -6,12 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Temp</title>
     <link rel="stylesheet" href="/css/styles.css" type="text/css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
 </head>
 <body>
     <div class="home">
         <h1>Global Data Temp from 1890-Present</h1>
+        <canvas id="charts" width="800" height="400"></canvas>
 
     </div>
     <script src="/js/scripts.js"></script>    
 </body>
 </html>
+
+
+<!--
+    steps
+    1- include the cdn link
+    2 - create canvas elements
+    3 - select the element to append chart
+    4. creat new chart object
+    5 - select the bar type
+    6 - add labels to use
+    7 - update the date to use
+    8 - 
+
+
+  -->
